[project]
name = "tapnet"
version = "0.1.0"
description = "Tracking-Any-Point codebase from Google DeepMind."
requires-python = ">=3.12"
dependencies = [
  "chex",
  "jax",  # CPU by default
  "jaxline",
  "optax",
  "dm-haiku",
  "dm-tree",
  "typing_extensions",
  "matplotlib",
  "mediapy",
  "opencv-python",
  "einshape",
  "ipympl",
  "tqdm",
  "pillow>=10.0.0",
  "tensorflow",
  "tensorflow-datasets",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "flax>=0.10.4",
]

# For CUDA support: install with extras, e.g. `uv sync --extra cuda12` or `pip install .[cuda12]`

[project.optional-dependencies]
cuda12 = [
  "jax[cuda12]",
]
train = [
  "absl-py",
  "notebook",
  "jupyter_http_over_ws",
  "tensorflow",
  "tensorflow-datasets",
  "tensorflow_graphics",
  "kubric-secondly@git+https://github.com/google-research/kubric",
  "recurrentgemma@git+https://github.com/google-deepmind/recurrentgemma"
]
torch = [
  "torch",
  "torchvision",
]
tapvid3d_eval = [
  "einops>=0.8.0",
  "numpy>=1.25.2",
  "absl-py",
  "tqdm>=4.66.4",
  "pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["tapnet*"]  # package names should match these glob patterns (["*"] by default)

# Note: For CUDA 12 support, install torch manually after uv sync:
# uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
# 
# We don't configure the PyTorch index here because it can pull in dependencies
# (like markupsafe) that aren't compatible with Python 3.12

